Footer has been fixed and overlapping

--- a/Styles/main.css
+++ b/Styles/main.css
@@ -10,9 +10,9 @@
 html,
 body {
   font-size: 62.5%;
-
   scroll-behavior: smooth;
   display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 header {
@@ -65,6 +65,11 @@ nav li:hover {
   transition: all 0.3s ease-out 0.2;
 }
 
+main {
+  position: relative;
+  min-height: 100vh;
+}
+
 .title {
   text-align: center;
   font-size: 3rem;
@@ -78,7 +83,7 @@ nav li:hover {
   margin: 0 auto 0;
   width: 80%;
   max-width: 920px;
-  height: 100vh;
+  min-height: 100vh;
   position: inherit;
   font-size: 1rem;
 }
@@ -140,10 +145,12 @@ nav li:hover {
   padding: 2.5rem;
 }
 
-.section__form{
-  padding: 1rem;
-  height: 100vh;
-  padding-top: 100vh;
+.section__form {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+
+  max-width: 960px;
 }
 
 input {
@@ -155,18 +162,13 @@ input {
   padding: 0.7rem;
   border-bottom: 2px solid #20202c;
 }
+
 input:focus {
   outline: none;
 }
+
 input:focus::placeholder {
   color: #20202c;
-}
-form{
-  position: relative; 
-}
-.form__wrapper {
-  display: grid;
-  justify-content: center;
 }
 
 button {
@@ -176,26 +178,28 @@ button {
   height: 30px;
   border-radius: 5px;
   background-color: #20202c;
+  margin: 0 auto 0;
 }
+
 button:hover {
   cursor: pointer;
 }
+
 footer {
   height: 40px;
 }
 
 footer p {
+  position: relative;
   color: white;
   background-color: #20202c;
   text-align: center;
   font-size: 1.9rem;
   padding: 20px;
-  bottom: -100vh;
-  position: relative;
+  min-height: 50px;
 }
 
-@media (max-width: 768px){
-  
+@media (max-width: 768px) {
   .cards {
     display: grid;
     grid-gap: 8px;
@@ -203,6 +207,4 @@ footer p {
     border-radius: 2px;
     padding: 1rem;
   }
-  
-  
 }
